# KFChess

./: .gitignore  CLAUDE.md  CMakeLists.txt  Main.cpp  README.md  SKILL.md
.claude/skills/iteration-workflow/: SKILL.md
app/: KFChessApp.cpp  Main.cpp
demo/: RenderDemo.cpp
include/: Board.h  Game.h  InputParser.h  MoveLegality.h  MovementRule.h  MovementRuleFactory.h  PieceColor.h  PieceMovementRules.h  StringUtils.h
include/animation/: PieceAnimator.h  PieceAssetPaths.h
include/app/: Controller.h  TextTestRunner.h
include/client/animation/: AnimationConfig.h  AnimationStateNames.h  AnimationTimeline.h  PieceAnimator.h  PieceAssetPaths.h
include/client/input/: BoardMapper.h  Controller.h  MouseInputRouter.h
include/client/view/: AnimationCache.h  AnimationLoader.h  GameScreenLayout.h  ImageView.h  Img.h  PieceView.h  PlayerNames.h  Renderer.h  ScreenMetrics.h  SpriteAnimation.h
include/engine/: GameEngine.h  GameEventListener.h  GameEvents.h  GameSnapshot.h  IGameEngine.h  MovesLog.h  RealTimeArbiter.h  ScoreBoard.h
include/input/: BoardMapper.h  Controller.h  MouseEvent.h  MouseInputRouter.h  PixelPoint.h
include/io/: BoardMapper.h  BoardParser.h  BoardPrinter.h  BoardTextFormat.h  PieceNotation.h  StringUtils.h  TimestampFormat.h
include/logic/bus/: GameEventListener.h  GameEvents.h
include/logic/config/: PieceCatalog.h  PieceDefinition.h
include/logic/engine/: GameEngine.h  GameSnapshot.h  IGameEngine.h  MovesLog.h  ScoreBoard.h
include/logic/io/: BoardParser.h  BoardPrinter.h  PieceNotation.h
include/logic/model/: Board.h  BoardPoint.h  GameState.h  Piece.h  PieceType.h  PieceValues.h
include/logic/realtime/: Cooldown.h  CooldownConfig.h  Motion.h  RealTimeArbiter.h
include/logic/rules/: LegalDestinations.h  MovementRuleFactory.h  PieceReachability.h  PieceRules.h  RuleEngine.h
include/model/: Board.h  BoardPoint.h  Piece.h  PieceValues.h  Position.h
include/realtime/: Cooldown.h  CooldownConfig.h  Motion.h  RealTimeArbiter.h
include/rules/: LegalDestinations.h  MovementRuleFactory.h  PieceReachability.h  PieceRules.h  RuleEngine.h
include/server/session/: IClientTransport.h  ServerSession.h
include/shared/protocol/: GameStateCodec.h  WireProtocol.h
include/texttests/: ScriptCommand.h  ScriptParser.h  ScriptRunner.h  TextTestRunner.h
include/view/: AnimationCache.h  AnimationLoader.h  GameScreenLayout.h  ImageView.h  Img.h  PieceView.h  PixelSize.h  PlayerNames.h  Renderer.h  ScreenMetrics.h  SpriteAnimation.h
src/: Board.cpp  Game.cpp  InputParser.cpp  MoveLegality.cpp  MovementRuleFactory.cpp  PieceMovementRules.cpp  main.cpp
src/animation/: AnimationConfig.cpp  AnimationTimeline.cpp  PieceAnimator.cpp  PieceAssetPaths.cpp
src/app/: Controller.cpp  TextTestRunner.cpp
src/client/animation/: AnimationConfig.cpp  AnimationTimeline.cpp  PieceAnimator.cpp  PieceAssetPaths.cpp
src/client/app/: KFChessApp.cpp
src/client/input/: BoardMapper.cpp  Controller.cpp  MouseInputRouter.cpp  PixelPoint.cpp
src/client/view/: AnimationCache.cpp  AnimationLoader.cpp  GameScreenLayout.cpp  ImageView.cpp  Img.cpp  PieceView.cpp  ScreenMetrics.cpp  SpriteAnimation.cpp
src/engine/: GameEngine.cpp  GameSnapshot.cpp  MovesLog.cpp  RealTimeArbiter.cpp  ScoreBoard.cpp
src/input/: BoardMapper.cpp  Controller.cpp  MouseInputRouter.cpp  PixelPoint.cpp
src/io/: BoardMapper.cpp  BoardParser.cpp  BoardPrinter.cpp  BoardTextFormat.cpp  PieceNotation.cpp  TimestampFormat.cpp
src/logic/config/: PieceCatalog.cpp
src/logic/engine/: GameEngine.cpp  GameSnapshot.cpp  MovesLog.cpp  ScoreBoard.cpp
src/logic/io/: BoardParser.cpp  BoardPrinter.cpp  PieceNotation.cpp  TimestampFormat.cpp
src/logic/model/: Board.cpp  BoardPoint.cpp  Piece.cpp  PieceValues.cpp  Position.cpp
src/logic/realtime/: Cooldown.cpp  CooldownConfig.cpp  Motion.cpp  RealTimeArbiter.cpp
src/logic/rules/: LegalDestinations.cpp  MovementRuleFactory.cpp  PieceReachability.cpp  PieceRules.cpp  RuleEngine.cpp
src/model/: Board.cpp  BoardPoint.cpp  Piece.cpp  PieceValues.cpp  Position.cpp
src/realtime/: Cooldown.cpp  CooldownConfig.cpp  Motion.cpp  RealTimeArbiter.cpp
src/rules/: LegalDestinations.cpp  MovementRuleFactory.cpp  PieceReachability.cpp  PieceRules.cpp  RuleEngine.cpp
src/server/session/: ServerSession.cpp
src/shared/protocol/: GameStateCodec.cpp  WireProtocol.cpp
src/texttests/: ScriptParser.cpp  ScriptRunner.cpp  TextTestRunner.cpp
src/view/: AnimationCache.cpp  AnimationLoader.cpp  GameScreenLayout.cpp  ImageView.cpp  Img.cpp  PieceView.cpp  ScreenMetrics.cpp  SpriteAnimation.cpp
tests/: BoardTest.cpp  GameTest.cpp  InputParserTest.cpp  MoveLegalityTest.cpp  PieceMovementRulesTest.cpp
tests/fixtures/animation/: malformed_config.json  missing_field_config.json  zero_fps_config.json
tests/unit/: AnimationConfigTest.cpp  AnimationTimelineTest.cpp  BoardMapperTest.cpp  BoardParserTest.cpp  BoardPrinterTest.cpp  BoardTest.cpp  BoardTextFormatTest.cpp  ControllerTest.cpp  CooldownConfigTest.cpp  CooldownTest.cpp  GameEngineEventsTest.cpp  GameEngineTest.cpp  GameScreenLayoutTest.cpp  GameSnapshotTest.cpp  GameStateCodecTest.cpp  LegalDestinationsTest.cpp  MotionTest.cpp  MouseInputRouterTest.cpp  MovesLogTest.cpp  PieceAnimatorTest.cpp  PieceAssetPathsTest.cpp  PieceCatalogTest.cpp  PieceNotationTest.cpp  PieceRulesTest.cpp  PieceTest.cpp  PieceValuesTest.cpp  PositionTest.cpp  RealTimeArbiterTest.cpp  RuleEngineTest.cpp  ScoreBoardTest.cpp  ScriptParserTest.cpp  ServerSessionTest.cpp  TimestampFormatTest.cpp  WireProtocolTest.cpp
texttests/: ScriptParser.cpp  ScriptRunner.cpp  ScriptRunner.h
